Fixing footer overlap bug

--- a/app/assets/stylesheets/nav/footer.scss
+++ b/app/assets/stylesheets/nav/footer.scss
@@ -21,7 +21,7 @@ footer {
     }
   }
 
-  @media (max-width: 790px) {
+  @media (max-width: 1100px) {
     margin: 50px 0 25px;
 
     .tagline {
